--- a/home.html
+++ b/home.html
@@ -1,62 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Me Live Code</title>
-  <link rel="stylesheet" href="style.css" />
+	<title>Attractions</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./articles.html">Articles</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section>
-      <h2>Attractions</h2>
-      <div class="grid-container">
-        <article class="card">
-          <img src="https://www.melivecode.com/attractions/1.jpg" alt="Phi Phi Islands" style="width:100%">
-          <div class="container">
-            <h4><b>Phi Phi Islands</b></h4>
-            <p>Phi Phi Islands are a group of islands in Thailand between the large island of Phuket and the Malacca
-              Coastal Strait of Thailand.</p>
-            <button aria-label="Press to read more about Phi Phi Islands">Read more</button>
-          </div>
-        </article>
-        <article class="card">
-          <img src="https://www.melivecode.com/attractions/2.jpg" alt="Eiffel Tower" style="width:100%">
-          <div class="container">
-            <h4><b>Eiffel Tower</b></h4>
-            <p>Eiffel Tower is one of the most famous structures in the world. Eiffel Tower is named after a leading
-              French architect and engineer. It was built as a symbol of the World Fair in 1889.</p>
-            <button aria-label="Press to read more about Phi Phi Islands">Read more</button>
-          </div>
-        </article>
-        <article class="card">
-          <img src="https://www.melivecode.com/attractions/3.jpg" alt="Times Square" style="width:100%">
-          <div class="container">
-            <h4><b>Times Square</b></h4>
-            <p>Times Square has become a global landmark and has become a symbol of New York City. This is a result of
-              Times Square being a modern, futuristic venue, with huge advertising screens dotting its surroundings.</p>
-            <button aria-label="Press to read more about Phi Phi Islands">Read more</button>
-          </div>
-        </article>
-      </div>
-    </section>
-    <section>
-      <h2>Contact Me Live Code</h2>
-      <h3>Send and email to melivecode@gmail.com</h3>
-    </section>
-  </main>
-</body>
+	<header>
+		<h1>Attractions</h1>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="attractions.html">Attractions</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
+	</header>
 
+	<main>
+		<section>
+			<h2>Attraction 1</h2>
+			<img src="attraction1.jpg" alt="Attraction 1">
+			<p>Attraction 1 is a must-see destination for any traveler. Located in the heart of the city, it offers breathtaking views of the surrounding landscape and a variety of activities for all ages. Visitors can enjoy hiking trails, water sports, and more. Don't miss out on this amazing experience!</p>
+		</section>
+
+		<section>
+			<h2>Attraction 2</h2>
+			<img src="attraction2.jpg" alt="Attraction 2">
+			<p>Attraction 2 is a cultural hotspot that showcases the rich history and traditions of the local community. Visitors can explore interactive exhibits, attend workshops and performances, and participate in hands-on activities that highlight the region's art, music, and cuisine. Come discover the unique beauty of this one-of-a-kind attraction.</p>
+		</section>
+
+		<section>
+			<h2>Attraction 3</h2>
+			<img src="attraction3.jpg" alt="Attraction 3">
+			<p>Attraction 3 is an outdoor enthusiast's dream come true. With its sprawling natural landscapes and diverse wildlife, it offers a range of exciting activities that cater to all interests. From rock climbing and ziplining to birdwatching and kayaking, there's something for everyone at this popular attraction. Plan your visit today!</p>
+		</section>
+	</main>
+
+	<footer>
+		<p>&copy; 2023 Your Company Name. All Rights Reserved.</p>
+	</footer>
+</body>
 </html>
